salary/salary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: salary
  name: salary-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salary
  template:
    metadata:
      labels:
        app: salary
    spec:
      containers:
      - image: rishabhsharmaip/salary:2
        name: salary-container
        ports:
        - containerPort: 8080
