salary/salary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: salary
  name: salary-svc
  namespace: default
spec:
  ports:
  - name: 8080-8080
    nodePort: 32644
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: salary
  type: NodePort
