salary/salary-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - host: frontend.example.com
    http:
      paths:
      - path: /api/v1/salary
        pathType: Prefix
        backend:
          service:
             name: frontend-svc
             port:
                 number: 3000
